--- a/TODO
+++ b/TODO
@@ -1,6 +1,10 @@
 Soon
 ====
 
+* Take flattenRotation code from pdf-split and do something with it,
+  maybe adding it to the library. Once there, call it from pdf-split
+  and bump up the required version of qpdf.
+
 * Externalize inline images doesn't walk into form XObjects. In
   general:
 
