--- a/TODO
+++ b/TODO
@@ -17,6 +17,20 @@ Soon
     images and page splitting as those operations become more
     elaborate, particularly with handling of form XObjects.
 
+* Flattening of form XObjects seems like something that would be
+  useful in the library. We are seeing more cases of completely valid
+  PDF files with form XObjects that cause problems in other software.
+  Flattening of form XObjects could be a useful way to work around
+  those issues or to prepare files for additional processing, making
+  it possible for users of the qpdf library to not be concerned about
+  form XObjects. This could be done recursively; i.e., we could have a
+  method to embed a form XObject into whatever contains it, whether
+  that is a form XObject or a page. This would require more
+  significant interpretation of the content stream. We would need a
+  test file in which the placement of the form XObject has to be in
+  the right place, e.g., the form XObject partially obscures earlier
+  code and is partially obscured by later code.
+
 * See if the tokenizer is a performance bottleneck and, if so,
   optimize it. We might end up with a high-performance tokenizer that
   has a different interface but still ultimately creates the same
